--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "intersection-observer": "^0.12.2",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "postcss": "^8",
