--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
