Revert "(feat)[Home]BlogRecent component,[Blog] Hero component, Page Blog, Posts, PostCard and Categories"
This reverts commit 96b6b16fd57e3c7556ab51d4f69acaf3fb07a32c.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,10 +36,12 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "__tests__/pages/page.test.js",
+    "app/components/Navigation.js",
+    "__tests__/components/Navigation.test.tsx",
+    "__tests__/pages/page.test.jsx",
     "contentlayer.config.js",
-    "next.config.js",
-    "app/blog/[slug]/page.jsx",
-    "app/blog/[slug]/BlogContent.jsx"
+    "next.config.js"
   ],
   "exclude": [
     "node_modules"
