--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,12 +36,14 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "__tests__/pages/page.test.js",
-    "app/components/Navigation.js",
-    "__tests__/components/Navigation.test.tsx",
-    "__tests__/pages/page.test.jsx",
     "contentlayer.config.js",
-    "next.config.js"
+    "next.config.js",
+    "app/blog/[slug]/BlogContent.jsx",
+    "app/blog/[slug]/page.jsx",
+    "app/components/blog/category/PostCard.jsx",
+    "app/components/blog/category/Posts.jsx",
+    "app/blog/categories/[slug]/page.jsx",
+    "app/blog/page.jsx"
   ],
   "exclude": [
     "node_modules"
